syntax = "proto3";

option go_package = "gitlab.ozon.dev/lvjonok/homework-2";

import "google/api/annotations.proto";

package api;

message Problem {
  int64 problem_id = 1;
  string image = 2;
  repeated string description = 3;
};

message CheckAnswerRequest {
  int64 chat_id = 1;
  string answer = 2;
};

enum SubmitResult {
  CORRECT = 0;
  WRONG = 1;
};

message CheckAnswerResponse {
  int64 problem_id = 1;
  string answer = 2;
  SubmitResult result = 3;
};

message GetRandomRequest {
  int64 chat_id = 1;
};

message GetRandomResponse {
  int64 task_number = 1;
  Problem problem = 2;
};

message GetProblemRequest {
  int64 chat_id = 1;
  int64 task_number = 2;
};

message GetProblemResponse {
  Problem problem = 1;
}; 

message GetStatRequest {
  int64 chat_id = 1;
};

message TaskStat {
  int64 task_number = 1;
  int64 correct = 2;
  int64 all = 3;
};

message GetStatResponse {
  repeated TaskStat stat = 1;
};


message GetRatingRequest {
  int64 chat_id = 1;
};

message GetRatingResponse {
  int64 position = 1;
  int64 all = 2;
};

message ParseProblemsRequest {
  int64 chat_id = 1;
};

message ParseProblemsResponse {};

message GetImageRequest {
  int64 image_id = 1;
};

message GetImageResponse {
  bytes image = 1;
};

service MathHelper {
  rpc GetRating (GetRatingRequest) returns (GetRatingResponse) {
    option (google.api.http) = {
      post: "/rating"
      body: "*"
    };
  }
  rpc GetStat (GetStatRequest) returns (GetStatResponse) {
    option (google.api.http) = {
      post: "/stat"
      body: "*"
    };
  }
  rpc CheckAnswer (CheckAnswerRequest) returns (CheckAnswerResponse) {
    option (google.api.http) = {
      post: "/check"
      body: "*"
    };
  }
  rpc GetRandom (GetRandomRequest) returns (GetRandomResponse) {
    option (google.api.http) = {
      post: "/random"
      body: "*"
    };
  }
  rpc GetProblem (GetProblemRequest) returns (GetProblemResponse) {
    option (google.api.http) = {
      post: "/problem"
      body: "*"
    };
  }
  rpc GetImage (GetImageRequest) returns (GetImageResponse) {
    option (google.api.http) = {
      post: "/image"
      body: "*"
    };
  }
};